列表渲染以及条件渲染

--- a/2020-10-16.md
+++ b/2020-10-16.md
@@ -1,3 +1,30 @@
-微信小程序：
-弹性盒模型
+## 微信小程序
+
+## 弹性盒模型
 flex:1与display:flex;flex-direction....应用场景的区别
+
+## 数据绑定 运用js的data对象完成WXML数据的动态显示
+
+基础绑定：数据绑定的所有接口都由data和外部对接<view>{{name}}</view>
+
+组件绑定：
+
+
+属性绑定：属性设定需要在引号内 否则会被认为是变量 ```class="{{flag?' color-red':'green'}}"```，```id="item{{id}}"
+
+条件渲染
+wx:if
+如果wx:if为true 那么整块都显示 否则整块都不显示 类相当于display:none 这种操作叫做惰性操作
+<block wx:if='{{true}}'>
+<view></view>
+<view></view>
+<block/>
+
+wx:if='{{false}}'与hidden='{{fals}}'区别 hidden是css层面上的隐藏 类似于opacity:0
+
+
+列表渲染
+wx:for 可以用在block上  循环一个块
+有默认值 index item
+
+block 与 view 在用wx:for时的不同
