--- a/2020-10-14.md
+++ b/2020-10-14.md
@@ -26,7 +26,7 @@ https://www.cnblogs.com/thousfeet/p/7840932.html
 通信的三种形式
 1.数据绑定
 2.子组件向父组件传递
-3.this.selectComponent
+3.父组件主动拿子组件的内容this.selectComponent
 
 
 组件嵌套  ？？？？              
